[gd_scene load_steps=2 format=3 uid="uid://rn5ag7ayduj1"]

[ext_resource type="Script" path="res://scripts/UI/TerritoryUI.gd" id="1"]

[node name="TerritoryUI" type="Control"]
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0

[node name="TerritoryLabel" type="Label" parent="VBoxContainer"]
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "Territory: Unknown"

[node name="FactionLabel" type="Label" parent="VBoxContainer"]
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Faction: Unknown"

[node name="ThreatLabel" type="Label" parent="VBoxContainer"]
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Threat: --"

[node name="FactionColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
color = Color(0.5, 0.5, 0.5, 1)
